--- a/page-template/index.html
+++ b/page-template/index.html
@@ -12,7 +12,7 @@
         <link rel="stylesheet" type="text/css" href="css/style.css">
     </head>
 
-    <body style="background: #000000 url('img/background.jpg'); background-size: cover; background-repeat: no-repeat;">
+    <body style="background: #ffffff; background-size: cover; background-repeat: no-repeat;">
 
         <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
             <div class="container">
@@ -23,7 +23,7 @@
             
             </div>
         </nav>
-<img class=mainphoto src="img/first.jpg">
+<img class=mainphoto src="https://s3.amazonaws.com/media.dpn/42019_dsc_1311f.jpg">
         <div class="container" style="padding-left: 10%; padding-right: 10%; padding-top: 15%">
            
               <h1>TITLE HERE</h1>
