--- a/page-template/index.html
+++ b/page-template/index.html
@@ -25,7 +25,7 @@
             
             </div>
         </nav>
-        <div class="container" style="padding-left: 10%; padding-right: 10%;>
+        <div class="container" style="padding-left: 10%; padding-right: 10%; padding-top: 15%>
         <img class=photo src="https://s3.amazonaws.com/media.dpn/42019_dsc_1311f.jpg">
            
               <h1>TITLE HERE</h1>
