--- a/page-template/index.html
+++ b/page-template/index.html
@@ -25,8 +25,8 @@
             
             </div>
         </nav>
-        <div class="container" style="padding-left: 10%; padding-right: 10%; padding-top: 15%">
-        <img class="photo" src="https://s3.amazonaws.com/media.dpn/42019_dsc_1311f.jpg">
+        <div class="container" style="padding-left: 10%; padding-right: 10%;">
+        <img class="mainphoto" src="https://s3.amazonaws.com/media.dpn/42019_dsc_1311f.jpg">
            
               <h1>TITLE HERE</h1>
               <p>The first step is the website ad: $10 for each post and $10 more every day to promote it. The cost adds up, but the payoff more than covers the investment. Jara Krys’s payoff comes at $300 per hour, non-negotiable. The next step is a mutual vetting by phone. Cops ask too much, and some men are just on the phone to get off on the sound of her voice. 
