--- a/page-template/index.html
+++ b/page-template/index.html
@@ -6,7 +6,7 @@
         <link href='http://fonts.googleapis.com/css?family=Roboto+Slab' rel='stylesheet' type='text/css'>
           
         <meta charset="utf-8">
-        <title>The Daily Pennsylvanian :: TITLE</title>
+        <title>The Daily Pennsylvanian :: Leaving Penn to find herself</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -28,9 +28,9 @@
             </div>
         </nav>
         <div class="container" style="padding-left: 10%; padding-right: 25%;">
-        <img class="mainphoto" src="https://s3.amazonaws.com/media.dpn/42019_dsc_1311f.jpg">
+        <img class="mainphoto" src="https://s3.amazonaws.com/media.dpn/42137_jarao.jpg">
   
-          <h1>The story of Jara feature title</h1>
+          <h1> .</h1>
               <span style="float:left;color:##2E2E2E;font-size:75px;line-height:60px;padding-top:3px; padding-right:3px;font-family: Times, serif, Georgia;">T</span>
               <p>  he first step is the website ad: $10 for each post and $10 more every day to promote it. The cost adds up, but the payoff more than covers the investment. Jara Krys’s payoff comes at $300 per hour, non-negotiable. The next step is a mutual vetting by phone. Cops ask too much, and some men are just on the phone to get off on the sound of her voice. 
 </p>
