--- a/page-template/index.html
+++ b/page-template/index.html
@@ -28,7 +28,7 @@
             </div>
         </nav>
         <div class="container" style="padding-left: 10%; padding-right: 25%;">
-        <img class="mainphoto" src="https://s3.amazonaws.com/media.dpn/42137_jarao.jpg">
+        <img class="mainphoto" src="https://s3.amazonaws.com/media.dpn/42138_jaranewnewo.jpg">
   
           <h1> .</h1>
               <span style="float:left;color:##2E2E2E;font-size:75px;line-height:60px;padding-top:3px; padding-right:3px;font-family: Times, serif, Georgia;">T</span>
