Added Slider Function
By Sibi, version 1

--- a/Features-Template-2.0/index.html
+++ b/Features-Template-2.0/index.html
@@ -207,6 +207,12 @@ In 1969, Penn students filled College Hall in protest against the University&#14
 
 <p>Though development with the community has avoided worsening tensions, an approach of collaboration comes with its own setbacks.  The ongoing conflict over the 40th and Pine mansion &#150 a Penn-owned historic property that is taking over a decade to develop &#150 shows how community input can significantly slow the University&#146s plans.</p> 
 
+<div class="image-slider">
+<div><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/4273/photoshop-face-before.jpg" /></div>
+<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/4273/photoshop-face-after.jpg" />
+</div>
+
+
 <p>Woodland Terrace Homeowners, a group of community members that live near the property, is heading two legal battles against the University&#146s plans to develop the historic mansion into a residential complex.</p> 
 
 <p>Quote from Paul Boni / community member about why they oppose Penn&#146s plan</p>
