Finally Centered Disqus, updated cover photo
Attempt 4

--- a/Features-Template-2.0/index.html
+++ b/Features-Template-2.0/index.html
@@ -233,7 +233,7 @@ In 1969, Penn students filled College Hall in protest against the University&#14
 </p>
     
 <center>
-    <div id="disqus_thread"></div>
+    <div id="disqus_thread" margin-left="-100px"></div>
 
     <script type="text/javascript">
         /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
