Nearly Finished Draft

--- a/Features-Template-2.0/index.html
+++ b/Features-Template-2.0/index.html
@@ -50,19 +50,6 @@
    
   <p>
     While University City is booming today, the means Penn used to achieve this end has permanently stained its relationship with West Philadelphia. But through community partnerships and a collaborative development process, the University now actively works to move forward from the past.
-    <table class= "tableRight">  
-      <tr>
-        <td><img class="picRight" src="pics/img2Sm.jpg"></td>
-      </tr>
-      <tr>
-        <td><div>
-          Credit - Luke Chen</div></td>
-      </tr>
-      <tr>
-        <td><div>
-          fig.1 - Picture of Locust Walk covered in trolley lines</div></td>
-      </tr>
-    </table>
     <p>
     &#147Lived experiences matter, and people don&#39t forget,&#148 explained Netter Center for Community Partnerships  Director Ira Harkavy. &#147Doing difficult things takes time, but there been an absolutely clear move from tension to collaboration.&#148
     </p>
@@ -79,13 +66,9 @@
   </p>
 <center><div class="image-slider" margin-left="-100px">
 <div><img src="pics/collegehallthen-2.jpg" /></div>
-<img src="pics/collegehallnow-2.jpg"/>
+<img src="pics/updatedcollegehall.jpg"/>
 </div></center>
 
-  <div id="quote">
-    "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-    tempor incididunt ut labore et dolore magna aliqua."
-  </div>
   <p>
 Coinciding with the post-World War II &#147urban renewal&#148 movement, Penn&#39s vision moved swiftly into reality as federal and city policies funded institutional growth that was expected to revitalize urban areas. In 1962, the Philadelphia City Planning Commission designated 80 blocks around Penn&#39s central campus for redevelopment, which let Penn seize properties for its own construction goals. Throughout the 1960&#39s, local businesses and about 650 homes were displaced as the buildings on what is today Locust Walk were demolished.  </p>  
   <p>
@@ -96,20 +79,6 @@ Coinciding with the post-World War II &#147urban renewal&#148 movement, Penn&#39
 <img src="pics/walnutnow-2.jpg"/>
 </div></center>
 
-    <table class= "tableLeft">  
-      <tr>
-	      <td><img class="picLeft" src="pics/img3Sm.jpg"></td>
-	    </tr>
-      <tr>
-        <td><div>
-          Credit</div></td>
-      </tr>
-      <tr>
-	      <td><div>
-          fig.1 - A view of the pulpit rock in Norway. Thanks
-          to Matt Williams for the photo</div></td>
-	    </tr>
-    </table>
     <p>
     After a relatively successful expansion period, Penn continued to develop northwest into the &#147Black Bottom,&#148 a predominantly black neighborhood. It was during this period that tensions between the University and the community erupted.
 
@@ -129,8 +98,7 @@ Coinciding with the post-World War II &#147urban renewal&#148 movement, Penn&#39
       </tr>
       <tr>
         <td><div>
-          fig.1 - A view of the pulpit rock in Norway. Thanks
-          to Matt Williams for the photo</div></td>
+          Penn, through the West Philadelphia Corporation, helped build the <b>University City Science Center.</b></div></td>
       </tr>
     </table>
     
@@ -164,12 +132,15 @@ The University &#147failed to realize that a city is more than a series of build
       </tr>
       <tr>
         <td><div>
-          fig.1 - A view of the pulpit rock in Norway. Thanks
-          to Lucas for making the caption work</div></td>
+          Penn purchased the <b>mansion and former nursing home at 40th and Pine streets</b> in 2003 after encouragement from community members.</div></td>
       </tr>
     </table>
   </div> 
 <p>After 1970, Penn stopped building beyond 40th Street not only due to protests, but also because federal funding had dried up in a slowed national economy. Though westward expansion stopped, Penn&#39s tensions with the community still lingered.</p>
+  <div id="quote">
+    "From taking and clearing land in the 1950s to the community initiatives of the 1990s, we now always try to build in conjunction with the community to support the community" -Ed Datz, Director of Real Estate Services
+  </div>
+
 <h3> Establishing a Norm of Collaboration</h3>
 
 <p>It wasn&#39t until the late 1980s that Penn really started to engage with the community. The University&#39s transition from one-sided development to active collaboration solidified when the Netter Center &#150 originally the Center for Community Partnerships &#150 was established in 1992.</p>
@@ -194,7 +165,7 @@ The University &#147failed to realize that a city is more than a series of build
 </p>
 <table class= "tableLeft">  
       <tr>
-        <td><img class="picLeft" src="pics/img3Sm.jpg"></td>
+        <td><img class="picLeft" src="pics/pennalexander.jpg"></td>
       </tr>
       <tr>
         <td><div>
@@ -202,8 +173,7 @@ The University &#147failed to realize that a city is more than a series of build
       </tr>
       <tr>
         <td><div>
-          fig.1 - A view of the pulpit rock in Norway. Thanks
-          to Matt Williams for the photo</div></td>
+          Like in the case of the mansion at 40th and Pine streets, West Philadelphia community members encouraged Penn to purchase the land where <b>Penn Alexander</b> currently sits. At the time, Penn didn't know that a school would take it's place.</div></td>
       </tr>
     </table>
 <p>&#147The development of Penn Alexander was done in partnership with the community,&#148 Datz said. &#147It was part of a pledge by Penn to make investments in the community at the request of the community.&#148
@@ -225,7 +195,7 @@ The University &#147failed to realize that a city is more than a series of build
       </tr>
       <tr>
         <td><div>
-          fig.1 - Picture of Locust Walk covered in trolley lines</div></td>
+          Penn Park, built </div></td>
       </tr>
     </table>
 
@@ -240,6 +210,9 @@ The University &#147failed to realize that a city is more than a series of build
 </p>
 <p>Beyond supporting economic growth, University City&#39s leading institutions have worked to integrate with West Philadelphia. In addition to Penn&#39s many outreach programs, University City District, which is largely funded by Penn, aims to improve the job opportunities, safety and overall living conditions of people living as far west as 50th Street.
 </p>
+  <div id="quote">
+    "This generation of University leaders has learned very valuable lessons about community relations. This matters because as we grow, our goal is to be of the University City community." -Craig Carnaroli, Executive Vice President of Penn
+  </div>
 <p>But despite University City&#39s prosperity and growing partnerships, some believe the process to get here was too damaging to forget.
 </p>
 <p>&#147What the University did was egregious &#150 human beings were dispossessed &#150 and I don&#39t think this past can be fixed,&#148 Palmer said. &#147Many people think it will all go away, but there has to be truth before reconciliation.&#148
@@ -252,19 +225,9 @@ The University &#147failed to realize that a city is more than a series of build
 </p>
 <p>&#147Even after the history of encroachment on the community, we cannot deny the fact that Penn has become an anchor institution in the community,&#148 West Philadelphia Cultural Alliance President Frances Aulston said. &#147Years of process and progress show that the community and entire city have benefitted from the planning and economic development that has gone on here.&#148
 </p>
-<p>&#147This generation of University leaders has learned very valuable lessons about community relations,&#148 Penn&#39s Executive Vice President Craig Carnaroli said. &#147This matters because as we grow, our goal is to be of the University City community.&#148
+<p id="end">&#147This generation of University leaders has learned very valuable lessons about community relations,&#148 Penn&#39s Executive Vice President Craig Carnaroli said. &#147This matters because as we grow, our goal is to be of the University City community.&#148
 </p>
 
-<center><div class="image-slider" margin-left="-100px">
-<div><img src="http://a1.dspnimg.com/data/l/467928107631_M5V8zyVM_l.jpg" /></div>
-<img src="http://a1.dspnimg.com/data/l/509084866423_rd0gX45i_l.jpg" />
-</div></center>
-
-
-
-<p id="end">DELETE ASDFHASDFHASODFHASODFHASDOFHOAWFHAOSDFHSADOHFSAUODFHASDO.</p>
-</p>
-    
 <center>
     <div id="disqus_thread" margin-left="-100px"></div>
 
