--- a/Features-Template-2.0/index.html
+++ b/Features-Template-2.0/index.html
@@ -59,31 +59,34 @@
   <h3> Developing tension </h3>
   <p> 
     &#147We were looking to opportunities to expand across Walnut and Chestnut to create a sense of community further out from central campus,&#148 Datz said.
-    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
   </p>
   <p>
     In the first half of the 20th century, College Hall was surrounded by a congested mix of noisy cars, trolley lines and pedestrians on unattractive concrete sidewalks. But between 1953 and 1970, Penn eliminated the transportation lines and existing properties to make way for 93 new buildings, including the high-rise dorms and Van Pelt Library.
   </p>
+  
 <center><div class="image-slider" margin-left="-100px">
 <div><img src="pics/collegehallthen-2.jpg" /></div>
 <img src="pics/updatedcollegehall.jpg"/>
 </div></center>
+<p style= "font-family: Roboto; color:#424242"> Photo by Yolanda Chen <br> Move the white slider to see before and after images.</p>
 
   <p>
 Coinciding with the post-World War II &#147urban renewal&#148 movement, Penn&#39s vision moved swiftly into reality as federal and city policies funded institutional growth that was expected to revitalize urban areas. In 1962, the Philadelphia City Planning Commission designated 80 blocks around Penn&#39s central campus for redevelopment, which let Penn seize properties for its own construction goals. Throughout the 1960&#39s, local businesses and about 650 homes were displaced as the buildings on what is today Locust Walk were demolished.  </p>  
   <p>
    The property seizures in this redevelopment area &#150 where Hill College House, the Inn at Penn and administration buildings sit today &#150 displaced mostly white residents and business owners who were compensated by Penn and the city. While some Walnut Street property owners threatened to challenge the displacement in court, Penn negotiated deals to limit criticism.
-
+</p>
 <center><div class="image-slider" margin-left="-100px">
 <div><img src="pics/walnutpast-2.jpg" /></div>
 <img src="pics/walnutnow-2.jpg"/>
 </div></center>
 
+<p style= "font-family: Roboto; color:#424242"> Photo by Yolanda Chen <br> Walnut street in the present and past.</p>
+
     <p>
     After a relatively successful expansion period, Penn continued to develop northwest into the &#147Black Bottom,&#148 a predominantly black neighborhood. It was during this period that tensions between the University and the community erupted.
 
   </p>
-  </p>
+  
   <p> &#147Penn&#39s development had gone relatively well from 1950 through about 1966, so Penn wasn&#39t apprehensive when continuing to expand north,&#148 University Archives and Records Center Director Mark Lloyd said. &#147But African Americans in that area protested since they did not see the interests of the University as greater than their own. The mood of the city changed.&#148
   </p>
   <p> Though &#147Black Bottom&#148 was located outside of Penn&#39s legal claim, the University worked through the West Philadelphia Corporation &#150 a Penn-organized coalition of education and medical institutions &#150 to further buffer its campus with education-oriented buildings, such as the University City Science Center.
@@ -94,7 +97,7 @@ Coinciding with the post-World War II &#147urban renewal&#148 movement, Penn&#39
       </tr>
       <tr>
         <td><div>
-          Credit</div></td>
+          Photo by Luke Chen</div></td>
       </tr>
       <tr>
         <td><div>
@@ -111,9 +114,8 @@ Coinciding with the post-World War II &#147urban renewal&#148 movement, Penn&#39
   
   <p> &#147Even though poorer black residents had real support in the neighborhood, we needed more than just people power,&#148 Palmer said. &#147You need money to maintain those fights.&#148
   </p>
-  <div class="pageBreak"> 
-    * * *
-  </div>
+
+
   <p> 
     In 1969, Penn students took over College Hall in a nonviolent protest against the University&#39s displacement of African American residents. Harkavy, an undergraduate at the time, led the school in calling out Penn&#39s role in the destruction of West Philadelphia communities.
   </p>
@@ -128,7 +130,7 @@ The University &#147failed to realize that a city is more than a series of build
       </tr>
       <tr>
         <td><div>
-          Credit</div></td>
+          Photo by Luke Chen</div></td>
       </tr>
       <tr>
         <td><div>
@@ -161,28 +163,29 @@ The University &#147failed to realize that a city is more than a series of build
 </p>
 <p>Since Penn has responded to the community with several adapted proposals, Wunsch &#150 once part of the opposition &#150 now urges the opposing group to start negotiating with the University. Even though the Woodland Terrace Association is the only community group still opposing Penn&#39s plan, the University &#147has maintained dialogue with them over the years and along the way has not unilaterally taken steps to redevelop the site,&#148 Datz said. 
 </p>
-<p>Just as community members encouraged Penn to purchase the mansion at 40th and Pine, the neighborhood wanted the University to take on the land where the Penn Alexander School sits today, &#147since it had the potential to have a tremendous impact on the neighborhood,&#148 said Barry Grossbach, executive director of the Spruce Hill Community Association zoning committee.
-</p>
+
 <table class= "tableLeft">  
       <tr>
         <td><img class="picLeft" src="pics/pennalexander.jpg"></td>
       </tr>
       <tr>
         <td><div>
-          Credit</div></td>
+          DP File Photo</div></td>
       </tr>
       <tr>
         <td><div>
           Like in the case of the mansion at 40th and Pine streets, West Philadelphia community members encouraged Penn to purchase the land where <b>Penn Alexander</b> currently sits. At the time, Penn didn't know that a school would take it's place.</div></td>
       </tr>
     </table>
+
+<p>Just as community members encouraged Penn to purchase the mansion at 40th and Pine, the neighborhood wanted the University to take on the land where the Penn Alexander School sits today, &#147since it had the potential to have a tremendous impact on the neighborhood,&#148 said Barry Grossbach, executive director of the Spruce Hill Community Association zoning committee.
+</p>
+
 <p>&#147The development of Penn Alexander was done in partnership with the community,&#148 Datz said. &#147It was part of a pledge by Penn to make investments in the community at the request of the community.&#148
 </p>
 <p>Starting with President Sheldon Hackney&#39s administration in the 1980s, Penn focused not only on avoiding residential displacement and including community input, but also on &#147looking at opportunities to the east with the philosophy that the University should make our part of the city a better place,&#148 said Lloyd.
 </p>
 <p>Under Hackney, Penn started looking to buy the U.S. Postal Service parking land east of campus. Penn Park &#150 the 24 acres of redeveloped land &#150 now offers sports facilities and green space that better connect Penn to the rest of the city.
-</p>
-<p>&#147Penn Park is definitely a public good and a community feature since it benefits the University while also offering a public amenity,&#148 said Thomas Dalfo, senior vice president of real estate services at the Philadelphia Industrial Development Corporation, a public-private development organization that has worked with Penn.
 </p>
 
 <table class= "tableRight">  
@@ -191,13 +194,16 @@ The University &#147failed to realize that a city is more than a series of build
       </tr>
       <tr>
         <td><div>
-          Credit - Luke Chen</div></td>
+          DP File Photo</div></td>
       </tr>
       <tr>
         <td><div>
-          Penn Park, built </div></td>
+          <b>Penn Park</b> was developed in the space of a run-down, non-descript U.S. Postal Service parking lot, which Penn purchased during President Sheldon Hackney's tenure. It cost the University $46.5 million to develop Penn Park.</div></td>
       </tr>
     </table>
+
+<p>&#147Penn Park is definitely a public good and a community feature since it benefits the University while also offering a public amenity,&#148 said Thomas Dalfo, senior vice president of real estate services at the Philadelphia Industrial Development Corporation, a public-private development organization that has worked with Penn.
+</p>
 
 <p>Penn is also helping the city in its most recent project on the South Bank &#150 a center for research and innovative enterprise. Built on an abandoned industrial site that was bringing down the area&#39s economic vitality, &#147the new commercialization center will be a very powerful tool that will more broadly benefit business development for the city as a whole,&#148 Dalfo said.
 </p>
