Updated Story Title, To Publish v1.0
v1.0

--- a/From_demolition_to_collaboration/index.html
+++ b/From_demolition_to_collaboration/index.html
@@ -140,7 +140,10 @@ The University &#147failed to realize that a city is more than a series of build
   </div> 
 <p>After 1970, Penn stopped building beyond 40th Street not only due to protests, but also because federal funding had dried up in a slowed national economy. Though westward expansion stopped, Penn&#39s tensions with the community still lingered.</p>
   <div id="quote">
-    "From taking and clearing land in the 1950s to the community initiatives of the 1990s, we now always try to build in conjunction with the community to support the community" -Ed Datz, Director of Real Estate Services
+    "From taking and clearing land in the 1950s to the community initiatives of the 1990s, we now always try to build in conjunction with the community to support the community"
+    <br>
+    <br>
+    <div style = "font-size: 18px; color: #424242; margin-left: 8%"> -Ed Datz, Director of Real Estate Services</div>
   </div>
 
 <h3> Establishing a Norm of Collaboration</h3>
@@ -149,7 +152,7 @@ The University &#147failed to realize that a city is more than a series of build
 
 <p>&#147There was a history that Penn had to deal with,&#148 Harkavy said. &#147We emphasized that we must treat community members as ends in themselves, not as means to the end.&#148
 </p>
-<p>While Penn became more invested in general community affairs, such as access to nutritional food and quality of education, its approach to development also evolved. To include the community in its projects, Penn started working directly with neighborhood associations and holding monthly community meetings known as &#147First Thursdays&#148 – venues that continue to be Penn&#39s main forum for informing community members about upcoming projects.
+<p>While Penn became more invested in general community affairs, such as access to nutritional food and quality of education, its approach to development also evolved. To include the community in its projects, Penn started working directly with neighborhood associations and holding monthly community meetings known as &#147First Thursdays&#148 &#150 venues that continue to be Penn&#39s main forum for informing community members about upcoming projects.
 </p>
 <p>&#147From taking and clearing land in the 1950s to the community initiatives of the 1990s, we now always try to build in conjunction with the community to support the community,&#148 Penn&#39s Director of Real Estate Services Ed Datz said.
 </p>
@@ -217,7 +220,10 @@ The University &#147failed to realize that a city is more than a series of build
 <p>Beyond supporting economic growth, University City&#39s leading institutions have worked to integrate with West Philadelphia. In addition to Penn&#39s many outreach programs, University City District, which is largely funded by Penn, aims to improve the job opportunities, safety and overall living conditions of people living as far west as 50th Street.
 </p>
   <div id="quote">
-    "This generation of University leaders has learned very valuable lessons about community relations. This matters because as we grow, our goal is to be of the University City community." -Craig Carnaroli, Executive Vice President of Penn
+    "This generation of University leaders has learned very valuable lessons about community relations. This matters because as we grow, our goal is to be of the University City community." 
+    <br>
+    <br>
+    <div style = "font-size: 18px; color: #424242; margin-left: 8%"> -Craig Carnaroli, Executive Vice President of Penn</div>
   </div>
 <p>But despite University City&#39s prosperity and growing partnerships, some believe the process to get here was too damaging to forget.
 </p>
