Added Dev Credits, To Publish v1,.3

--- a/From_demolition_to_collaboration/index.html
+++ b/From_demolition_to_collaboration/index.html
@@ -241,6 +241,11 @@ The University &#147failed to realize that a city is more than a series of build
 <p id="end">&#147This generation of University leaders has learned very valuable lessons about community relations,&#148 Penn&#39s Executive Vice President Craig Carnaroli said. &#147This matters because as we grow, our goal is to be of the University City community.&#148
 </p>
 
+<p style= "font-family: Roboto; color:#424242; font-size: 12px"> This page was developed by Luke Chen, Sibi Vijayakumar, and  Josh Karnofsky.</p>
+<br>
+<br>
+
+
 <center>
     <div id="disqus_thread" margin-left="-100px"></div>
 
