Changed to lowercase again, To Publish v1.4

--- a/From_demolition_to_collaboration/index.html
+++ b/From_demolition_to_collaboration/index.html
@@ -66,7 +66,7 @@
   
     <center><div class="image-slider" margin-left="-100px">
     <div><img src="pics/collegehallthen-2.jpg" /></div>
-    <img src="pics/updatedcollegehall.jpg"/>
+    <img src="pics/updatedcollegehall2.jpg"/>
     </div></center>
   
   <p style= "font-family: Roboto; color:#424242"> Photo by Yolanda Chen <br> Move the white slider to see before and after images.</p>
