--- a/From_demolition_to_collaboration/index.html
+++ b/From_demolition_to_collaboration/index.html
@@ -58,9 +58,6 @@
   </p>
   <h3> Developing tension </h3>
 
-  <p>&#147We were looking to opportunities to expand across Walnut and Chestnut to create a sense of community further out from central campus,&#148 Datz said.
-  </p>
-
   <p>
     In the first half of the 20th century, College Hall was surrounded by a congested mix of noisy cars, trolley lines and pedestrians on unattractive concrete sidewalks. But between 1953 and 1970, Penn eliminated the transportation lines and existing properties to make way for 93 new buildings, including the high-rise dorms and Van Pelt Library.
   </p>
@@ -244,7 +241,7 @@ The University &#147failed to realize that a city is more than a series of build
 <p id="end">&#147This generation of University leaders has learned very valuable lessons about community relations,&#148 Penn&#39s Executive Vice President Craig Carnaroli said. &#147This matters because as we grow, our goal is to be of the University City community.&#148
 </p>
 
-<p style= "font-family: Roboto; color:#424242; font-size: 12px"> This page was developed by Luke Chen, Sibi Vijayakumar, and  Josh Karnofsky.</p>
+<p style= "font-family: Roboto; color:#424242; font-size: 12px"> This page was developed by Luke Chen, Sibi Vijayakumar, and  Josh Karnofsky. Staff Writer Jennifer Wright contributed reporting.</p>
 <br>
 <br>
 
