--- a/Henry/ImageHoverText.html
+++ b/Henry/ImageHoverText.html
@@ -31,7 +31,7 @@
 	<!-- copy these lines to your document: -->
 
 	<div id="imagehovertext_hype_container" style="position:relative;overflow:hidden;width:600px;height:400px;">
-		<script type="text/javascript" charset="utf-8" src="ImageHoverText.hyperesources/imagehovertext_hype_generated_script.js?15847"></script>
+		<script type="text/javascript" charset="utf-8" src="http://dpwebadmin.github.io/projects/Henry/ImageHoverText.hyperesources/imagehovertext_hype_generated_script.js"></script>
 	</div>
 
 	<!-- end copy -->
